# rquickshare-pi

./: BUILD.md  LEGAL_NOTICE.md  PI_APPS_SUBMISSION.md  PI_BUILD_NOTES.md  README.md  install-rquickshare-pi.sh
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  lint.yml  release.yml
app/main/: package.json  pnpm-lock.yaml
app/main/src/: main.ts
app/main/src-tauri/: Cargo.toml  tauri.conf.json
app/main/src-tauri/capabilities/: migrated.json
app/main/src-tauri/icons/: icon.icns
app/main/src-tauri/linux/: rquickshare-pi.desktop.in
app/main/src-tauri/src/: main.rs  notification.rs  store.rs
app/main/src-tauri/src/cmds/: change_device_name.rs  error_report.rs  get_hostname.rs  get_runtime_status.rs  mod.rs
app/main/src/components/: HomePage.vue
app/main/src/composables/: Heading.vue  RuntimePromptModal.vue  SettingsModal.vue  SideMenu.vue
app/main/src/vue_lib/: types.ts  utils.ts
app/main/src/vue_lib/assets/: main.postcss
app/main/src/vue_lib/helper/: ParamsHelper.d.ts
core_lib/: Cargo.toml  package-lock.json  package.json
core_lib/bindings/: SendInfo.ts
core_lib/src/: lib.rs  manager.rs  utils.rs
core_lib/src/hdl/: ble.rs  blea.rs  inbound.rs  mdns.rs  mod.rs  outbound.rs
core_lib/src/proto_src/: offline_wire_formats.proto  wire_format.proto
docs/: app.js  index.html  install.sh  robots.txt  sitemap.xml  styles.css  uninstall.sh
packaging/pi-apps/: category-entry
packaging/pi-apps/RQuickShare Pi/: description  install-64
