[package]
name = "rquickshare-pi"
version = "0.0.2-alpha"
default-run = "rquickshare-pi"
edition = "2021"
authors = ["martichou", "EladBG-code"]
repository = "https://github.com/EladBG-code/rquickshare-pi"
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "1.0"
fern = { version = "0.7", features = ["colored"] }
humantime = "2.1"
log = "0.4"
notify-rust = "4.10"
rqs_lib = { path = "../../../core_lib", features = ["experimental"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sys_metrics = "0.2"
tauri = { version = "2.2", features = [ "devtools", "tray-icon", "native-tls-vendored", "image-png"] }
tauri-plugin-autostart = "2.2"
tauri-plugin-process = "2.2"
tauri-plugin-notification = "2.2"
tauri-plugin-single-instance = "2.2"
tauri-plugin-store = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-clipboard-manager = "2.2"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "net", "sync", "time", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
libappindicator = "0.9"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
